OpenVDB smoke cache glitches out with smokeless flames #48236

Closed
opened 2016-04-22 08:15:27 +02:00 by Jason Clarke · 6 comments

System Information
Windows 10, Nvidia GTX 980

Blender Version
Broken: 75c9fe4

Short description of error
If you try and bake a smoke simulation that has the smoke flames > smoke property set to 0 (flames burn clean and do not emit smoke), the OpenVDB cache will be blank. Point cache works fine,

Exact steps for others to reproduce the error
Open the attached .blend, hit bake, note lack of any result. Setting smoke flames -> smoke to something >0 or switching the cache format to point cache will fix the issue.

smoke.zip

**System Information** Windows 10, Nvidia GTX 980 **Blender Version** Broken: 75c9fe4 **Short description of error** If you try and bake a smoke simulation that has the smoke flames > smoke property set to 0 (flames burn clean and do not emit smoke), the OpenVDB cache will be blank. Point cache works fine, **Exact steps for others to reproduce the error** Open the attached .blend, hit bake, note lack of any result. Setting smoke flames -> smoke to something >0 or switching the cache format to point cache will fix the issue. [smoke.zip](https://archive.blender.org/developer/F304811/smoke.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

This issue was referenced by a9729e6d75

This issue was referenced by a9729e6d75c74f48c6135df710f117435e7ff2f3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Should be fixed now, thanks for the report!

Should be fixed now, thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48236
No description provided.